# HistogramGenerator

./: .gitignore  CMakeLists.txt  HistogramGenerator.cpp  Image.h  README.md  install-dependancies.sh  output
.github/workflows/: c-cpp.yml
tests/: CMakeLists.txt  testImage.cpp
